--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
     "@vime/core": "^5.3.3",
     "@vime/react": "^5.3.3",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.2",
     "graphql": "^16.5.0",
     "phosphor-react": "^1.4.1",
@@ -19,6 +24,7 @@
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
